# brusnika_land_bank

./: .gitignore  Readme.md  docker-compose.yml
land_bank/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  revision.sh  run_application.sh  run_dev.sh
land_bank/application/auth/: __init__.py  dependency.py  hasher.py  refresh.py  token.py
land_bank/application/file/: file_validator.py
land_bank/application/message/: __init__.py  imessage.py  mail_message.py  password_reset_message.py
land_bank/application/smtp/: send_message.py
land_bank/auth/: __init__.py  api.py  dependencies.py  dependency.py  models.py  refresh_session.py  token_service.py
land_bank/auth/schema/: __init__.py  employee_schema.py
land_bank/auth/schemas/: __init__.py  employee_schemas.py  token_schema.py
land_bank/bank/: model.py  models.py
land_bank/bank/endpoint/: areas.py
land_bank/bank/endpoints/: __init__.py  areas.py
land_bank/bank/schema/: __init__.py  land_schemas.py  params.py
land_bank/bank/schemas/: land_schemas.py
land_bank/bash/: revision.sh
land_bank/core/: __init__.py  config.py  database.py  redis.py  rpc_exceptions.py
land_bank/domain/area_comment/: __init__.py  schema.py  service.py
land_bank/domain/building/: service.py
land_bank/infrastructure/: application.py  settings.py
land_bank/layer/: __init__.py  dependencies.py
land_bank/layers/: dependencies.py  s3_service.py
land_bank/migrations/: env.py
land_bank/tests/: conftest.py
land_bank/util/: __init__.py
land_bank/utils/: __init__.py  file_validator.py
(+80 files in other folders)
