[tool.poetry]
name = "land-bank"
version = "0.1.0"
description = "Brusnika's Land Bank, UrFU Project"
authors = ["sxkxixx <sasha.kornilov.1212@gmail.com>"]
readme = "README.md"
packages = [{include = "land_bank"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
fastapi-jsonrpc = "^3.0.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
asyncpg = "^0.29.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
aioredis = "^2.0.1"
python-multipart = "^0.0.6"
aioboto3 = "^12.0.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.25.2"
pytest-asyncio = "^0.23.2"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
